MP Rest client backport 2.27 -> 2.25.1